website/versioned_docs/version-0.7.0/cli-reference/gitops_completion.md
## gitops completion

Generate the autocompletion script for the specified shell

### Synopsis

Generate the autocompletion script for gitops for the specified shell.
See each sub-command's help for details on how to use the generated script.


### Options

```
  -h, --help   help for completion
```

### Options inherited from parent commands

```
  -e, --endpoint string            The Weave GitOps Enterprise HTTP API endpoint
      --insecure-skip-tls-verify   If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --namespace string           The namespace scope for this operation (default "flux-system")
  -v, --verbose                    Enable verbose output
```

### SEE ALSO

* [gitops](gitops.md)	 - Weave GitOps
* [gitops completion bash](gitops_completion_bash.md)	 - Generate the autocompletion script for bash
* [gitops completion fish](gitops_completion_fish.md)	 - Generate the autocompletion script for fish
* [gitops completion powershell](gitops_completion_powershell.md)	 - Generate the autocompletion script for powershell
* [gitops completion zsh](gitops_completion_zsh.md)	 - Generate the autocompletion script for zsh

###### Auto generated by spf13/cobra on 12-Apr-2022
